--- a/world-chain-builder/Cargo.toml
+++ b/world-chain-builder/Cargo.toml
@@ -45,6 +45,7 @@ op-alloy-consensus = "0.2"
 alloy-rlp = "0.3"
 
 # other
+bytemuck = "1"
 revm-primitives = { version = "9.0.0", default-features = false, features = [
     "std",
 ] }
