feat: integrate world-chain-builder into the devnet

--- a/devnet/network_params.yaml
+++ b/devnet/network_params.yaml
@@ -1,6 +1,7 @@
 optimism_package:
   participants:
-    - el_type: op-geth-builder
+    - el_type: world-chain
+    # - el_type: op-geth-builder
     # - el_type: op-geth
     # - el_type: op-reth
     # - el_type: op-erigon
