--- a/world-chain-builder/Cargo.toml
+++ b/world-chain-builder/Cargo.toml
@@ -90,6 +90,8 @@ parking_lot = "0.12"
 derive_more = "1"
 dotenvy = "0.15.7"
 tikv-jemallocator = { version = "0.6.0", optional = true }
+bytes = "1.7.2"
+hex = "0.4.3"
 
 [dev-dependencies]
 tempfile = "3"
