--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 world-chain-builder/target
-devnet/.static/beacon/data/*
+
+./devnet/.static/beacon/data
+./devnet/.static/beacon/data/secrets/*
 devnet/genesis/target
 .env
 
